syntax = "proto3";
import "Open-IM-Server/pkg/proto/sdkws/ws.proto";
option go_package = "OpenIM/pkg/proto/third;third";
package third;


message ApplySpaceReq {
  string name = 1; // 文件名字
  int64 size = 2; // 大小
  string hash = 3; // md5
  uint32 purpose = 4; // 用途
  string contentType = 5;
}

message ApplySpaceResp {
  string url = 1; // 不为空表示已存在
  int64 size = 2; // 分片大小
  repeated string put = 3;// put地址
  string confirmID = 4; // 确认ID
}

message ConfirmSpaceReq {
  string confirmID = 1; // 确认ID
}

message ConfirmSpaceResp {
  string confirmID = 1;
}

message GetRTCInvitationInfoReq {
  string ClientMsgID = 1;
}

message GetRTCInvitationInfoResp {
 sdkws.InvitationInfo invitationInfo = 1;
 sdkws.OfflinePushInfo offlinePushInfo = 2;
}

message GetRTCInvitationInfoStartAppReq {
  string userID = 1;
}

message GetRTCInvitationInfoStartAppResp {
 sdkws.InvitationInfo invitationInfo = 1;
 sdkws.OfflinePushInfo offlinePushInfo = 2;
}

message FcmUpdateTokenReq {
 int32 Platform = 1;
 string FcmToken = 2;
}

message FcmUpdateTokenResp {
}

message SetAppBadgeReq {
  string FromUserID = 1;
  int32 AppUnreadCount = 2;
}

message SetAppBadgeResp {
}

service third {
  rpc ApplySpace(ApplySpaceReq) returns(ApplySpaceResp);
  rpc GetRTCInvitationInfo(GetRTCInvitationInfoReq) returns(GetRTCInvitationInfoResp);
  rpc GetRTCInvitationInfoStartApp(GetRTCInvitationInfoStartAppReq) returns(GetRTCInvitationInfoStartAppResp);
  rpc FcmUpdateToken(FcmUpdateTokenReq) returns(FcmUpdateTokenResp);
  rpc SetAppBadge(SetAppBadgeReq) returns(SetAppBadgeResp);
}






